@@ -2,7 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
-  - Reduced perl requirement to v5.8.1
+  [Bugfix]
+  - Correct parsing of partial postcodes when using valid outcodes (now matches 'E14' as 'E14' not 'E1')
 
 0.012  2014-03-12 17:06:25 GMT
 
